# facefusion-onnxrun

./: .gitignore  CMakeLists.txt  README.md
cpp/: face68landmarks.cpp  face68landmarks.h  faceenhancer.cpp  faceenhancer.h  facerecognizer.cpp  facerecognizer.h  faceswap.cpp  faceswap.h  main.cpp  utils.cpp  utils.h  yolov8face.cpp  yolov8face.h
python/: face_swap.py  main.py  requirements.txt
script/: download_weights.sh
